--- a/fontend/login.html
+++ b/fontend/login.html
@@ -1,4 +1,3 @@
-<!-- login.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -6,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <style>
-    /* Estilos aqui */
   </style>
 </head>
 <body>
@@ -23,7 +21,7 @@
       const senha = document.getElementById('senha').value;
 
       fetch('http://localhost:3000/api/login', {
-    method: 'POST', // Certifique-se de que o método é POST
+    method: 'POST', 
     headers: {
         'Content-Type': 'application/json',
     },
